--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -29,6 +29,8 @@
 @import "mobile/header";
 @import "mobile/dompet";
 @import "mobile/home";
+@import "mobile/bidding";
+@import "mobile/insertphone";
 
 // reuseable components
 @import "reusable/base";
