--- a/src/style/sass/mobile/_home.scss
+++ b/src/style/sass/mobile/_home.scss
@@ -6,39 +6,48 @@
   &__label{
     display: flex;
     justify-content: center;
-    margin: 5%;
   }
   &__content1{
-    display: flex;
-    justify-content: space-around;
+    text-align: center
   }
-  &__content2{
-    display: flex;
-    justify-content: space-evenly;
-  }
-
   &__button{
-    width: 60px;
-    height: 70px;
-    border-radius: 10px;
-    margin: 2px;
+    font-size: 20px;
+    width: 110px;
+    height: 50px;
+    margin: 10px;
+    border: 1px solid grey;
     background-color: white;
-    &__container{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    &__image{
-      display: flex;
-      width: 100%
-    }
   }
 }
 
-@media (min-width:450px) {
+.background{
+  background-image: url(https://s3-ap-southeast-1.amazonaws.com/iconpulsa/opacityLogo.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.mobile__paket{
+  &__button{
+    font-size: 20px;
+    width: 110px;
+    height: 50px;
+    margin: 10px;
+    background-color: white;
+  }
+}
+
+@media (min-width:390px) {
   .mobile__pulsa__button{
-      width: 100px;
-      height: 100px;
+      width: 170px;
+      height: 70px;
+  }
+}
+
+@media (min-width:570px) {
+  .mobile__pulsa__button{
+      width: 230px;
+      height: 80px;
   }
 }
 
@@ -63,4 +72,70 @@
       margin: 5%;
     }
   }
+}
+
+.mobile-modal-confirm{
+  &-container{
+    margin-top: 40%;
+    border: 1px solid grey;
+    background-color: lightgray;
+    padding: 3%;
+    font-size: 16px;
+  }
+  &-label{
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+  &-button{
+    width: 40%;
+    background-color: #FFCD05;
+    border-radius: 5px;
+    &-container{
+      display: flex;
+      justify-content: space-around;
+    }
+  }
+}
+
+.mobile-home{
+  &-tab{
+    width: 100%;
+    border-radius: 9px;
+    color: black;
+    border: white;
+    background-color: lightgrey;
+    &:focus{
+      outline: none;
+    }
+    &-container{
+      border-radius: 10px;
+      text-align: center;
+      border: 1px solid;
+      width: 60%;
+      display: flex;
+      justify-content: space-around;
+      margin: auto;
+      margin-top: 5%;
+      margin-bottom: 5%;
+      background-color: lightgrey;
+      font-size: 15px;
+    }
+  }
+
+  &-image{
+    width: 15%;
+    &-container{
+      text-align: center;
+      border: 1px solid grey;
+      width: 60%;
+      margin: auto;
+      border-radius: 10px;
+      margin-bottom: 5%;
+    }
+  }
+}
+
+.active{
+  background-color: black;
+  color: white
 }
