fix paketdata flow

--- a/src/style/sass/mobile/_bidding.scss
+++ b/src/style/sass/mobile/_bidding.scss
@@ -19,6 +19,12 @@
     background-color: #FFCD06;
     font-size: 20px;
   }
+  &__displayPrice{
+    display: flex;
+    justify-content: flex-end;
+    text-decoration-line: line-through;
+    text-decoration-color: red;
+  }
   &__content{
     border: 1px solid;
     max-width: 70%;
