--- a/src/style/sass/mobile/_home.scss
+++ b/src/style/sass/mobile/_home.scss
@@ -8,7 +8,8 @@
     justify-content: center;
   }
   &__content1{
-    text-align: center
+    text-align: center;
+    margin-bottom: 5%;
   }
   &__button{
     font-size: 20px;
@@ -17,6 +18,10 @@
     margin: 10px;
     border: 1px solid grey;
     background-color: white;
+    &__image{
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
