--- a/src/style/sass/mobile/_insertphone.scss
+++ b/src/style/sass/mobile/_insertphone.scss
@@ -28,7 +28,9 @@
 
   &__content{
     &__price{
-      font-size: 35px
+      display: flex;
+      justify-content: center;
+      font-size: 40px;
     }
 
     &__labelPercentage{
