--- a/src/style/sass/reusable/_base.scss
+++ b/src/style/sass/reusable/_base.scss
@@ -55,3 +55,10 @@ ul {
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
+
+.baBackground{
+  background-image: url(https://s3-ap-southeast-1.amazonaws.com/iconpulsa/opacityLogo.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
