remove paket data smartfren, make bidding timer wait for the price

--- a/src/style/sass/pages/_home.scss
+++ b/src/style/sass/pages/_home.scss
@@ -53,9 +53,12 @@
         font-size: 40px;
         &:hover {
           cursor: pointer;
-          background-color: #ffe680;
         }
         &:focus{
+          outline: none;
+          background-color: #ffe680;
+        }
+        &:active{
           outline: none;
           background-color: #ffe680;
         }
