--- a/src/style/sass/components/_footer.scss
+++ b/src/style/sass/components/_footer.scss
@@ -91,3 +91,23 @@
     }
   }
 }
+
+
+// .btn {
+//   border: 1px solid black;
+//   background-color: yellowgreen;
+
+//   &-small {
+//     height: 24px;
+//   }
+//   &-medium {
+//     height: 32px;
+//   }
+//   &-large {
+//     height: 40px;
+//   }
+
+//   &-block {
+//     width: 100%;
+//   }
+// }
