fix bca payment

--- a/src/style/sass/components/_modal.scss
+++ b/src/style/sass/components/_modal.scss
@@ -723,10 +723,10 @@
         color: black;
       }
       &:focus{
-        background-color: yellow;
+        background-color: #FFCD05;
       }
       &:active{
-        background-color: yellow;
+        background-color: #FFCD05;
       }
     }
     margin: 1.75rem auto;
