--- a/src/style/sass/pages/_user.scss
+++ b/src/style/sass/pages/_user.scss
@@ -14,9 +14,12 @@
     border-radius: 5px;
     /* padding-left: 51%; */
     margin-left: 10%;
+    width: 135%;
+    &_img {
+      display: none;
+    }
   }
 }
-
 
 
 .user{
@@ -114,9 +117,8 @@
       }
     }
 
-  &__row2{
-    width: 100%;
-
+    &__row2{
+      width: 100%;
 
     &__li{
       display: flex;
@@ -152,7 +154,6 @@
         background-color: white;
         border: 2px solid #FFCD05;
         border-radius: 5px;
-
       }
     }
     &__3{
@@ -220,15 +221,29 @@
       border-radius: 5px;
     }
 
-    &__button2{
-        // width: 45%;
-    }
-    }
+    // &__button2{
+    //     // width: 45%;
+    //   display: none;
+    //   &_img {
+    //     display: block;
+    //   }
+    // }
+    // }
   }
 }
-
-@media (min-width: 200px) and (max-width:768px) {
-
+// @media (min-width: 200px) and (max-width:768px) {
+@media only screen and (min-width: 320px) and (max-width:480px) {
+  .verified {
+    &__profile {
+      display: none;
+      &_img {
+        display: block;
+        img {
+          width: 90%;
+        }
+      }
+    }
+  }
   .user{
     &__container{
       text-align: center;
@@ -270,7 +285,7 @@
       font-size: 18px;
       &__row1{
         &__phoneInfo{
-          font-size: 20px;
+          font-size: 14px;
         }
       }
 
@@ -288,16 +303,27 @@
         }
         &__number{
           font-size: 15px;
-
         }
       }
     }
   }
 }
 
-@media (min-width: 769px) and (max-width:900px) {
+  // .verified {
+  //   &__profile {
+  //     display: none;
+  //     &_img {
+  //       img {
+  //         width: 85%;
+  //         display: block;
+  //       }
+  //     }
+  //   }
+  // }
+}
 
-  .user{
+@media (min-width: 769px) and (max-width:900px) {
+  .user {
     &__container{
       text-align: center;
       width: 95%;
