handle responsif user page

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -15,7 +15,7 @@
 @import "pages/pembayaran";
 @import "pages/game";
 @import "pages/topupkey";
-@import "pages/user";
+@import "pages/users";
 @import "pages/phone";
 @import "pages/requestResetPassword";
 @import "pages/emailVerification";
