make reward page

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -24,6 +24,7 @@
 @import "pages/layanan";
 @import "pages/dompet";
 @import "pages/faq";
+@import "pages/reward";
 
 //mobile
 @import "mobile/header";
@@ -31,6 +32,7 @@
 @import "mobile/home";
 @import "mobile/bidding";
 @import "mobile/insertphone";
+@import "mobile/user";
 
 // reuseable components
 @import "reusable/base";
