--- a/src/style/sass/pages/_faq.scss
+++ b/src/style/sass/pages/_faq.scss
@@ -124,6 +124,7 @@
     text-align: center;
   }
   &__content{
+    list-style: none;
     max-width: 70%;
     display: flex;
     flex-direction: column;
