fix icon size in game

--- a/src/style/sass/pages/_game.scss
+++ b/src/style/sass/pages/_game.scss
@@ -40,8 +40,9 @@
 		text-align: center;
 		margin: 10%;
 		&__icon{
-			width: 20%;
-			margin-right: 10px;
+			width: 15%;
+      margin-right: 10px;
+      margin-left: 5%;
 		}
 	}
 
