--- a/src/style/sass/components/_modal.scss
+++ b/src/style/sass/components/_modal.scss
@@ -827,9 +827,6 @@
         height: 20px;
         width: 20%;
         cursor: pointer;
-        &:checked{
-
-        }
       }
       &__button{
         margin: 5%;
@@ -839,6 +836,10 @@
         background-color: #FFCD05;
         border: 2px solid #FFCD05;
         margin-top: 0;
+      }
+      &__label{
+        margin-top: 2%;
+        font-size: 12px;
       }
     }
   }
