--- a/src/style/sass/reusable/_components.scss
+++ b/src/style/sass/reusable/_components.scss
@@ -129,3 +129,32 @@
     font-size: 25px;
   }
 }
+
+.pagination{
+  &-active{
+    background-color: #FFCD05;
+  }
+  &-container{
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+  }
+  &-button{
+    padding: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
+    border: 1px solid #dee2e6;
+    &:focus{
+      outline: none;
+      cursor: pointer;
+    }
+    &:hover{
+      background-color: #FFCD05;
+      box-shadow: 0 2px rgba(0,0,0,0.2);
+      cursor: pointer;
+    }
+    &:active{
+      background-color: #FFCD05;
+    }
+  }
+}
