--- a/src/style/sass/reusable/_base.scss
+++ b/src/style/sass/reusable/_base.scss
@@ -60,6 +60,8 @@ input::-webkit-inner-spin-button {
 }
 
 .baButton{
+  border-radius: 5px;
+  background-color: #FFCD05;
   &:hover{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     cursor: pointer;
