--- a/src/style/sass/pages/_layanan.scss
+++ b/src/style/sass/pages/_layanan.scss
@@ -41,7 +41,7 @@
     border-radius: 5px;
     background-color: #FFCD05;
     line-height: 21px;
-    font-family: Helvetica;
+    font-family: 'Roboto', sans-serif;
     &__container{
       display: flex;
       justify-content: flex-end;
