--- a/src/style/sass/components/_header.scss
+++ b/src/style/sass/components/_header.scss
@@ -128,7 +128,7 @@
   color: black;
   background-color: white;
   box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5);
-  font-family: Helvetica;
+  font-family: 'Roboto', sans-serif;
   font-size: 22px;
   font-weight: 600;
   line-height: 20px;
@@ -209,7 +209,7 @@
     align-items: center;
     background-color: white;
     color: var(--color-grey-5);
-    font-family: Helvetica;
+    font-family: 'Roboto', sans-serif;
     font-size: 22px;
     font-weight: 600;
     line-height: 11px;
