--- a/src/style/sass/pages/_bidding.scss
+++ b/src/style/sass/pages/_bidding.scss
@@ -13,7 +13,7 @@
       width: 100%;
       text-align: center;
       color: #FFCD05;
-      font-family: Helvetica;
+      font-family: 'Roboto', sans-serif;
       font-size: 26px;
       font-weight: 600;
       line-height: 30px;
@@ -27,7 +27,7 @@
     &__col2{
       &__pulsa{
         color: #FFFFFF;
-        font-family: Helvetica;
+        font-family: 'Roboto', sans-serif;
         font-size: 22px;
         font-weight: 600;
         line-height: 26px;
@@ -41,7 +41,7 @@
 
       &__live{
         color: #FFCD05;
-        font-family: Helvetica;
+        font-family: 'Roboto', sans-serif;
         font-size: 20px;
         font-weight: 900;
         line-height: 24px;
