--- a/src/style/sass/pages/_login.scss
+++ b/src/style/sass/pages/_login.scss
@@ -7,7 +7,7 @@
   padding: 5%;
 
   &__Title1{
-    font-family: Helvetica;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 500;
     line-height: 16px;
@@ -17,7 +17,7 @@
   }
 
   &__Title2{
-    font-family: Helvetica;
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-weight: 900;
     line-height: 24px;
@@ -38,7 +38,7 @@
     background-color: var(--color-yellow-1);
     border-color: var(--color-yellow-1);
     width: 100%;
-    font-family: Helvetica;
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-weight: bold;
     text-align: center;
