--- a/src/style/sass/mobile/_insertphone.scss
+++ b/src/style/sass/mobile/_insertphone.scss
@@ -13,8 +13,8 @@
     margin-top: 5%;
     margin-bottom: 5%;
     padding: 2%;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     background-color: #dee2e8;
   }
   &__input{
@@ -50,6 +50,44 @@
       display: flex;
       padding-top: 4%;
       justify-content: space-around;
+    }
+  }
+
+  &-pln{
+    &-header{
+      display: flex;
+      justify-content: space-around;
+    }
+    &-image{
+      width:20%;
+      height: 20%;
+    }
+    &-displayPrice{
+      display: flex;
+      flex-direction: column;
+      margin-top: 10%;
+      font-size: 13px;
+      font-weight: bolder;
+      &-line{
+        text-decoration-line: line-through;
+        text-decoration-color: red;
+      }
+      &-final{
+        display: flex;
+        flex-direction: column;
+        margin-top: 5%;
+        font-size: 20px;
+        font-weight: bolder;
+      }
+    }
+    &-label{
+      font-size: 15px;
+      &-center{
+        text-align: center
+      }
+    }
+    &-line{
+      border: 0.5px dashed grey;
     }
   }
 }
