--- a/src/style/sass/pages/_insertphone.scss
+++ b/src/style/sass/pages/_insertphone.scss
@@ -123,7 +123,7 @@
     &__image{
       display: flex;
       margin: auto;
-      width: 15%;
+      width: 35%;
       &__id{
         align-self: center;
         margin-bottom: 2%;
@@ -158,10 +158,11 @@
         border: 1px solid black;
         border-top: none;
         border-bottom: 1px solid #FFCD05;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
+        border-radius: 10px;
+        // border-top-right-radius: 10px;
+        // border-bottom-right-radius: 10px;
+        // border-top-left-radius: 10px;
+        // border-bottom-left-radius: 10px;
         &:focus{
           outline: none;
         }
