--- a/src/style/sass/mobile/_home.scss
+++ b/src/style/sass/mobile/_home.scss
@@ -38,14 +38,25 @@
       padding: 0.5%;
       border-radius: 5px;
       color: white;
-
-}
+    }
   }
 }
 
 .mobile__game{
-  display: flex;
-  flex-wrap: wrap;
+  text-align: center;
+  &__container{
+    display: flex;
+    justify-content: center;
+  }
+  &__content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__label{
+    text-align: center;
+    font-size: 13px;
+  }
 }
 
 .background{
