--- a/src/style/sass/pages/_home.scss
+++ b/src/style/sass/pages/_home.scss
@@ -54,6 +54,21 @@
       margin-bottom: 5%;
       margin-top: 2%;
     }
+    &__label{
+      font-size: 13px;
+    }
+    &__ml{
+      &__container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      &__diamond{
+        width: 15%;
+        margin-left: -3%;
+      }
+    }
   }
 
   &__bottom{
