--- a/src/style/sass/mobile/_insertphone.scss
+++ b/src/style/sass/mobile/_insertphone.scss
@@ -121,6 +121,10 @@
       font-style: oblique;
       color: red;
     }
+    &-diamond{
+      width: 25px;
+      height: 22px;
+    }
   }
   &-labelprice{
     display: flex;
